--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--CSS para phone-->
     <link rel="stylesheet" href="estilo/style.css">
+
+    <!--CSSs demais formatos-->
+    <link rel="stylesheet" href="estilo/media-query.css">
     
     
     <title>Login</title>
