update tela login

--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
     <!--CSSs demais formatos-->
     <link rel="stylesheet" href="estilo/media-query.css">
 
-    <style>
-        img#usuario{
-            display: inline;
-            width: 1em;
-            height: 1em;
-        }
-    </style>
+    <!--Habilitar uso api de ícones google-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
     
     
@@ -35,13 +31,13 @@
                 <form action="login.php" method="post">
                     <div>
                         <!--Ícone usuário-->
-                        <img id="usuario" src="imagens/person.png" alt="Ícone Usuário">
+                        <span class="material-icons">person</span>
                         <input type="email" name="email" id="id_email" placeholder="seu e-mail" required>
                         <label for="id_email">E-mail </label>
                     </div>
                     <div>
                         <!--Ícone senha-->
-
+                        <span class="material-icons">vpn_key</span>
                         <input type="password" name="senha" id="id_senha" placeholder="sua senha" required>
                         <label for="id_senha">Senha </label>
                     </div>
