--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                 <h1>login</h1>
                 <p>Seja bem-vindo(a) ! Faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
                 <form action="login.php" method="post">
-                    <div>
+                    <div class="campo">
                         <!--Ícone usuário-->
                         <span class="material-icons">person</span>
                         <input type="email" name="email" id="id_email" placeholder="seu e-mail" autocomplete="email" maxlength="30" required>
                         <label for="id_email">E-mail </label>
                     </div>
-                    <div>
+                    <div class="campo">
                         <!--Ícone senha-->
                         <span class="material-icons">vpn_key</span>
                         <input type="password" name="senha" id="id_senha" placeholder="sua senha" autocomplete="current-password" minlength="8" maxlength="20">
                         <label for="id_senha">Senha </label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <!--Remendo pro butão esqueci senha, que deveria ser feito com js, mas aqui vai ser remendado com link-->
-                    <a href="esqueci.html">
+                    <!--Remendo pro butão esqueci senha, que deveria ser feito com js, mas aqui vai ser remendado com tag e classe botao-->
+                    <a href="esqueci.html" class="botao">
                         Esqueci a senha <span class="material-icons">mail</span>
                     </a>
                 </form>
